added filters page and icons

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,16 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  width: 100vw;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 code {
